tests/macros/unknown/option.stderr
error: unknown question option `unknown`
 --> $DIR/option.rs:2:45
  |
2 |     let q = inquisition::questions![Input { unknown: 0 }];
  |                                             ^^^^^^^
