tests/macros/unknown/option.rs
fn main() {
    let q = inquisition::questions![Input { unknown: 0 }];
}
